infra/kafka/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: kafka
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - name: internal
      port: 9092
      protocol: TCP
    - name: controller
      port: 9093
      protocol: TCP
    - name: external
      port: 9091
      protocol: TCP
